27/08/2006
- Removal of OpenGLBinding in favour of standard GLEW library for extension processing
  [Crispy].

** RELEASE 0.5.3

- Bugfix: selected brushes now parented to func_static and other entities
- Light texture selector highlights current shader

** RELEASE 0.5.2

16/08/2006
- Fixed lighting renderer for surfaces missing bump/specular maps

15/08/2006
- Load DDS textures from correct path ("dds/")

14/08/2006
- Ambient lighting implemented in renderer

13/08/2006
- Added light scale parameter to renderer and .game file

06/08/2006
- Added light texture selection PropertyEditor and chooser dialog

** RELEASE 0.5.1

23/07/2006
- Added new context menu with options to add light, model or entity, along
  with new dialog for selecting an entity class to create.

22/07/2006
- Merged GtkRadiant fix for func_static dragging issue

21/07/2006
- Fixed missing shaders on ASE models

17/07/2006
- Entity keyval changes now undoable and correctly set "map changed" flag to allow
  saving.

16/07/2006
- Removed .xlink processing code which causes crashes on Windows 2000

** RELEASE 0.5.0

16/07/2006
- Fixed save function silently failing when .map cannot be renamed to .bak before save
- Changed EntityInspector from a GtkPaned to a GtkVBox, adjusted size requests to allow
  for shrinkage on low-res displays.

** RELEASE 0.5pre3

15/07/2006
- Added ColourPropertyEditor for selection of entity colours using a GtkColorButton

** RELEASE 0.5pre2

14/07/2006
OrbWeaver
- Removed EntityAttributes for light, all attributes now explicit keyvals

11/06/2006
SPoG
- Fixed arbitrary rotation X and Y axes appearing to be transposed.

04/06/2006
SPoG
- Fixed crash when deleting items from Build menu.

03/06/2006
SPoG
- Changed doom3 entity creation to add model key for brush-entities.
- Fixed crash in Save Region.
- Fixed detail brushes being turned structural when texture is set.

29/05/2006
SPoG
- Changed default doom3 light_radius to be taken from the entity-definition.